[package]
name = "store-things"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = "4.5.3"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.214", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.19"
